fix: alignement au centre des cartes en mode rectoVerso

--- a/css/print.css
+++ b/css/print.css
@@ -24,6 +24,9 @@
 		flex-wrap: wrap;
 		align-content: flex-start;
 	}
+	.printPage--rectoVerso {
+		justify-content: center;
+	}
 
 	.printPage:last-child {
 		page-break-after: avoid;
